# Meta_Hackthon

./: .gitignore  Blog.md  Dockerfile  README.md  STREAMLIT_SETUP_GUIDE.md  app.py  app_demo.py  baseline_inference.py  chatgpt prompt FINALLLL.txt  client.py  inference.py  models.py  openenv.yaml  post_training_eval.py  pyproject.toml  pytest.ini  requirements.txt  validate_environment.py
data/: routes.py
mumbai-ui/: index.html  package-lock.json  package.json
mumbai-ui/src/: App.css  App.tsx  index.css
mumbai-ui/src/components/: AgentComparison.tsx  InputForm.tsx  MapView.tsx  NavSidebar.tsx  RewardBar.tsx  RewardChart.tsx  RouteCard.tsx  ScenarioCard.tsx  Sidebar.tsx  SimulationPanel.tsx
mumbai-ui/src/data/: dummyRoutes.ts
mumbai-ui/src/hooks/: useSimulation.ts
mumbai-ui/src/pages/: Home.tsx  MapPage.tsx  Scenario.tsx  Simulation.tsx
mumbai-ui/src/services/: api.ts
mumbai-ui/src/types/: env.ts  route.ts
results/: baseline_results.json  post_training_results.json  pre_training_logs.json
scripts/: README.md  generate_plots.py  run_baseline.py  run_post_training.py
server/: Dockerfile  app.py  environment.py  graders.py
tests/: test_server_routes.py
