[project]
name = "mumbai-lastmile-crisis-response"
version = "1.0.0"
description = "OpenEnv Mumbai last-mile crisis response environment"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openenv-core>=0.2.0",
  "requests",
  "streamlit",
  "openai",
]

[project.scripts]
server = "server.app:main"
